sophons/apps/rclone-s3/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone-s3-backup
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: s3-backup
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rclone
      app.kubernetes.io/instance: s3-backup
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone
        app.kubernetes.io/instance: s3-backup
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      tolerations:
        - key: caeneus.sophons.cloud
          operator: Exists

      containers:
        - name: rclone
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - s3
            - --addr=:8080
            - --auth-key="$(AWS_ACCESS_KEY_ID),$(AWS_SECRET_ACCESS_KEY)"
            - /less-big-boi

          ports:
            - containerPort: 8080
              protocol: TCP
              name: s3

          volumeMounts:
            - mountPath: /less-big-boi
              name: less-big-boi
              subPath: rclone

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

      volumes:
        - name: less-big-boi
          persistentVolumeClaim:
            claimName: backup-less-big-boi
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone-s3-crypt-b2-backups
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: s3-crypt-b2-backups
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rclone
      app.kubernetes.io/instance: s3-crypt-b2-backups
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone
        app.kubernetes.io/instance: s3-crypt-b2-backups
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: NotIn
                    values: [ng]
              weight: 100

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: rclone
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - s3
            - --addr=:8080
            - --auth-key="$(AWS_ACCESS_KEY_ID),$(AWS_SECRET_ACCESS_KEY)"
            - "cryptb2:"
          ports:
            - containerPort: 8080
              protocol: TCP
              name: s3

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
